compiler/testData/diagnostics/tests/delegatedProperty/missedGetter.fir.kt
val a: Int by <!UNRESOLVED_REFERENCE!>A<!>()

class A
